# pmonnt

./: .gitignore  Cargo.toml  LICENSE  README.md
pmonnt-core/: Cargo.toml
pmonnt-core/examples/: test_processes.rs
pmonnt-core/src/: diff.rs  hashing.rs  lib.rs  local_cache.rs  module.rs  network.rs  process.rs  reputation.rs  service_control.rs  services.rs  snapshot.rs  thread.rs  token.rs  vt.rs
pmonnt-core/src/handles/: cache.rs  compute.rs  config.rs  leak_detector.rs  mod.rs  summary.rs
pmonnt-core/src/providers/: aggregator.rs  mod.rs  threatfox.rs
pmonnt-core/src/providers/malwarebazaar/: cscb.rs  download.rs  info.rs  mod.rs  provider.rs  recent.rs  recent_detections.rs  reputation.rs  taginfo.rs  types.rs
pmonnt-core/src/reputation_service/: error.rs  mb.rs  mod.rs  service.rs  sync.rs  tf.rs  types.rs  vt.rs  worker.rs
pmonnt-core/src/win/: aclui_process_permissions.rs  dump.rs  handles.rs  mod.rs  module.rs  ntdll.rs  process_control.rs  process_details.rs  process_enum.rs  process_metrics.rs  process_path.rs  process_priority.rs  signature.rs  thread.rs  thread_control.rs  thread_permissions.rs  thread_stack.rs  token.rs  token_info.rs
pmonnt-core/src/yara/: engine.rs  ioc_generator.rs  memory.rs  mod.rs  rules.rs
pmonnt-core/src/yara/scanner/: mod.rs  process_scanner.rs  types.rs
pmonnt-core/tests/: README.md  aggregator_tests.rs  critical_unit_tests.rs  handle_cache_feature_tests.rs  handle_cache_tests.rs  handle_config_persistence_tests.rs  ioc_generator_tests.rs  local_cache_tests.rs  malwarebazaar_integration.rs  malwarebazaar_provider_tests.rs  mb_json_parsing.rs  network_tests.rs  provider_http_state_tests.rs  reputation_service_smoke.rs  reputation_worker_tests.rs  scanner_tests.rs  secrets_not_logged.rs  services_tests.rs  thread_parse.rs  threatfox_json_parsing.rs  vt_json_parsing.rs  vt_provider_tests.rs  windows_smoke.rs  yara_engine_tests.rs  yara_rule_dedupe.rs  yara_rules_tests.rs  yara_scan_smoke.rs
pmonnt-core/tests/data/: mb_hit_malicious.json  mb_not_found.json  mb_unauthorized.json  tf_rate_limited.json  threatfox_search_hash_no_results.json  threatfox_search_hash_ok.json  vt_hit_clean.json  vt_hit_malicious.json  vt_not_found_error.json  vt_rate_limited.json  vt_unauthorized.json
pmonnt-ui/: Cargo.toml
pmonnt-ui/src/: background_worker.rs  credentials.rs  gpu.rs  main.rs  process_info.rs  process_table.rs  theme.rs  ui_renderer.rs  ui_state.rs  util.rs  view.rs
pmonnt-ui/src/app/: mod.rs  network_sort.rs  perf.rs  state.rs  tests.rs  update.rs
pmonnt-ui/src/app/perf_window/: history.rs  mod.rs  sampling.rs  sparkline.rs  ui.rs  (+2 more)
pmonnt-ui/src/gpu_pdh/: mod.rs  pdh.rs  sampler.rs  warnings.rs
pmonnt-ui/src/process_rows/: grouped.rs  mod.rs  tree.rs
pmonnt-ui/src/ui_renderer/: affinity_dialog.rs  context.rs  dump_dialog.rs  kill_dialog.rs  priority_dialog.rs  scan.rs  service_dialog.rs  threads.rs
(+38 files in other folders)
