[package]
name = "pmonnt-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
autobins = false

[dependencies]
eframe = { version = "0.28", features = ["persistence"] }
egui = "0.28"
egui_extras = "0.28"
egui_plot = "0.28"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
pmonnt-core = { path = "../pmonnt-core" }
tokio = { version = "1.0", features = ["rt-multi-thread", "sync"] }
tokio-util = "0.7"
keyring = { version = "3", features = ["windows-native"] }
crossbeam-channel = "0.5"
num_cpus = "1.16"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Performance", "Win32_System_SystemInformation", "Win32_Graphics_Dxgi"] }
open = "5.0"
serde_json = "1.0"
rfd = "0.14"
raw-window-handle = "0.6"

[[bin]]
name = "pmonnt"
path = "src/main.rs"

[features]
dev-tools = []
